force-app/main/default/objects/SiebelRdoAttribute__x/SiebelRdoAttribute__x.object-meta.xml
<CustomObject>
    <description>SiebelRdoAttribute</description>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SiebelRdoAttribute</externalName>
    <label>Attributi RDO Siebel</label>
    <pluralLabel>Attributi RDO Siebel</pluralLabel>
</CustomObject>