force-app/main/default/objects/SiebelRdoAttribute__x/fields/ATTR_ID__c.field-meta.xml
<CustomField>
    <fullName>ATTR_ID__c</fullName>
    <description>ATTR_ID</description>
    <externalDeveloperName>ATTR_ID</externalDeveloperName>
    <label>ID Attributo</label>
    <length>15</length>
    <type>Text</type>
</CustomField>