force-app/main/default/objects/SiebelRdoAttribute__x/fields/ATTR_NAME__c.field-meta.xml
<CustomField>
    <fullName>ATTR_NAME__c</fullName>
    <description>ATTR_NAME</description>
    <externalDeveloperName>ATTR_NAME</externalDeveloperName>
    <label>Nome</label>
    <length>100</length>
    <type>Text</type>
</CustomField>