force-app/main/default/objects/SiebelRdoAttribute__x/fields/CFG_STATE_CD__c.field-meta.xml
<CustomField>
    <fullName>CFG_STATE_CD__c</fullName>
    <description>CFG_STATE_CD</description>
    <externalDeveloperName>CFG_STATE_CD</externalDeveloperName>
    <label>Stato configurazione CD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>