force-app/main/default/objects/SiebelRdoAttribute__x/fields/HIDDEN_FLG__c.field-meta.xml
<CustomField>
    <fullName>HIDDEN_FLG__c</fullName>
    <description>HIDDEN_FLG</description>
    <externalDeveloperName>HIDDEN_FLG</externalDeveloperName>
    <label>Flag Hidden</label>
    <length>1</length>
    <type>Text</type>
</CustomField>