force-app/main/default/objects/SiebelRdoAttribute__x/fields/NUM_VAL__c.field-meta.xml
<CustomField>
    <fullName>NUM_VAL__c</fullName>
    <description>NUM_VAL</description>
    <externalDeveloperName>NUM_VAL</externalDeveloperName>
    <label>Valore (numero)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>