force-app/main/default/objects/SiebelRdoAttribute__x/fields/PREV_CHAR_VAL__c.field-meta.xml
<CustomField>
    <fullName>PREV_CHAR_VAL__c</fullName>
    <description>PREV_CHAR_VAL</description>
    <externalDeveloperName>PREV_CHAR_VAL</externalDeveloperName>
    <label>Valore Precedente (lettera)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>