force-app/main/default/objects/SiebelRdoAttribute__x/fields/PREV_DATE_VAL__c.field-meta.xml
<CustomField>
    <fullName>PREV_DATE_VAL__c</fullName>
    <description>PREV_DATE_VAL</description>
    <externalDeveloperName>PREV_DATE_VAL</externalDeveloperName>
    <label>Valore Precedente (data)</label>
    <type>DateTime</type>
</CustomField>