force-app/main/default/objects/SiebelRdoAttribute__x/fields/VALIDATION_SPEC__c.field-meta.xml
<CustomField>
    <fullName>VALIDATION_SPEC__c</fullName>
    <description>VALIDATION_SPEC</description>
    <externalDeveloperName>VALIDATION_SPEC</externalDeveloperName>
    <label>Validazione Specifica</label>
    <length>250</length>
    <type>Text</type>
</CustomField>