force-app/main/default/objects/SiebelRdoAttribute__x/fields/X_FLAG_INVIO_ATTR__c.field-meta.xml
<CustomField>
    <fullName>X_FLAG_INVIO_ATTR__c</fullName>
    <description>X_FLAG_INVIO_ATTR</description>
    <externalDeveloperName>X_FLAG_INVIO_ATTR</externalDeveloperName>
    <label>Flag Invio Attributo</label>
    <length>1</length>
    <type>Text</type>
</CustomField>